setup efcore polyglot persistence for cosmos connection (#136)
* new api endpoint to return article data

* setup efcore polyglot persistence

* add kv secrets for cosmos connection

* terraform readme updates
